attempt to fix z-index

--- a/src/assets/style/cmps/WorkSpaceCmps/_WorkSpaceBoardHeader.scss
+++ b/src/assets/style/cmps/WorkSpaceCmps/_WorkSpaceBoardHeader.scss
@@ -8,7 +8,7 @@
     left: 0;
     top: 0;
     background-color: #fff;
-    z-index: 999999;
+    z-index: 1000;
     .board-header {
       max-height: 40px;
       padding: $spacing-xs 0;
