--- a/src/assets/style/cmps/WorkSpaceCmps/modals/_InboxModal.scss
+++ b/src/assets/style/cmps/WorkSpaceCmps/modals/_InboxModal.scss
@@ -1,7 +1,7 @@
 .inbox-modal {
   position: fixed;
   inset: 32px 32px 0 32px;
-  z-index: 99999;
+  z-index: infinite;
   background-color: white;
   border-radius: 16px 16px 0 0;
   outline: none;
