--- a/src/assets/style/cmps/WorkSpaceCmps/modals/_NotifyModal.scss
+++ b/src/assets/style/cmps/WorkSpaceCmps/modals/_NotifyModal.scss
@@ -1,16 +1,14 @@
 .notification-modal {
-  background-color: #fff;
   position: absolute;
   width: 605px;
   height: calc(100% - 48px);
   bottom: 0;
   right: 0;
-  z-index: 9999;
+  z-index: 80000000;
   border-top-left-radius: 8px;
   box-shadow: $box-shadow-small;
 
   .notification-header {
-    // background-color: red;
     align-items: center;
     padding: $spacing-medium $spacing-medium $spacing-small calc($spacing-medium - $spacing-xs);
 
