--- a/src/assets/style/cmps/side-bar/_side-bar.scss
+++ b/src/assets/style/cmps/side-bar/_side-bar.scss
@@ -287,7 +287,7 @@
   position: fixed;
   background-color: white;
   border-radius: $spacing-small;
-  z-index: 150;
+  z-index: 300;
 
   .filter-container {
     .filter-heading {
